# bliq

./: .gitignore  CITATION.cff  LICENSE  README.md  __init__.py  pyproject.toml
bliq/: loss.py  loss_circle.py  model.py  model_circle.py  ode.py  temp.py  trainer.py  utils.py
examples/: Bernoulli_Lemniscate.ipynb  helix_test.py  inverse_circle.py  linear_case.py  nonlinear.py
