[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bliq"
version = "0.1.0"
description = "BLiqNet: Bidirectional Liquid Neural Networks for inverse problems"
authors = [
    { name="Pavan Mohan Neelamraju" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "torch",
    "numpy",
    "matplotlib"
]

[tool.setuptools.packages.find]
where = ["."]