[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bliq"
version = "1.0.0"
description = "BLiqNet: Bidirectional Liquid Neural Networks for General Inverse Problems"
authors = [{ name="Pavan Mohan Neelamraju" }]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "torch>=2.0.0",
    "torchdiffeq>=0.2.3",
    "numpy",
    "matplotlib",
    "scikit-learn"
]

[tool.setuptools.packages.find]
where = ["."]